<resources>
    <string name="app_name">Dalia</string>
    <string name="pref_data_file">prefData</string>
    <string name="key_state">state</string>
    <string name="key_user">user</string>
    <string name="hint_email">Enter your E-mail</string>
    <string name="title_dalia">DALIA</string>
    <string name="hint_password">Create a password</string>
    <string name="term_and_cond">Terms and Cond</string>
    <string name="dev">Development</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="hint_name">What\'s your name?</string>
    <string name="add_plant_name_error">Required field</string>
    <string name="btn_add_houseplant">Add a plant</string>
    <string name="add_Plant_Name_Error">You must name your plant</string>
    <string name="btn_add_plant">Add to Home</string>
    <string name="splash_intro">Being a plant parent doesn\'t have to be so hard</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="action_selected_one">Single</string>
    <string name="action_selected_many">Multiple</string>


    <string-array name="category_name">
        <item>Flowery</item>
        <item>Foliage</item>
        <item>Succulent</item>
        <item>Cacti</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
