<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/pattern_start">


    <TextView
        android:id="@+id/logoSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:paddingTop="150dp"
        android:paddingBottom="30dp"
        android:text="@string/title_dalia"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoSignIn"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="#AFFFFFFF"
        android:padding="10dp">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name"
            android:text=""
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:text=""
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/hint_password"
            android:text=""
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPassword"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_sign_up" />

    </LinearLayout>

    <TextView
        android:id="@+id/termCond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPanel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="25dp"
        android:text="@string/term_and_cond"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/aboutMe"
        android:layout_width="77dp"
        android:layout_height="18dp"
        android:layout_below="@id/loginPanel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="280dp"
        android:text="@string/dev"
        android:textColor="#ffffff"/>


</RelativeLayout>